# mcomix

./: ChangeLog.md  MANIFEST.in  README.md  pyproject.toml
mcomix/: __main__.py  about_dialog.py  archive_extractor.py  archive_packer.py  archive_tools.py  bookmark_backend.py  bookmark_dialog.py  bookmark_menu.py  bookmark_menu_item.py  callback.py  comment_dialog.py  constants.py  edit_comment_area.py  edit_dialog.py  edit_image_area.py  enhance_backend.py  enhance_dialog.py  event.py  file_chooser_base_dialog.py  file_chooser_library_dialog.py  file_handler.py  file_provider.py  i18n.py  icons.py  image_handler.py  image_tools.py  keybindings.py  keybindings_editor.py  labels.py  last_read_page.py  layout.py  lens.py  log.py  main.py  message_dialog.py  openwith.py  openwith_menu.py  osd.py  pageselect.py  portability.py  (+18 more)
mcomix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcomix/archive/: archive_base.py  mobi.py  password.py  pdf_external.py  pdf_multi.py  sevenzip_external.py  zip.py
mcomix/archive/native_pdf/: child.py  manager.py  parent.py
mcomix/messages/de/LC_MESSAGES/: mcomix.mo
mcomix/messages/zh_CN/LC_MESSAGES/: mcomix.mo
share/applications/: mcomix.desktop
share/metainfo/: mcomix.metainfo.xml
